Update Итоговая аттестация.Ручное тестирование.md
Добавила иллюстрацию

--- a/Итоговая аттестация.Ручное тестирование.md
+++ b/Итоговая аттестация.Ручное тестирование.md
@@ -39,6 +39,8 @@ PW: d8252957e0
 Результат прогона тест-рана Qase.io:
 https://app.qase.io/public/report/15c2b8d7909ad6a598fcc90aa7f12afb07c184c0 
 
+Тестран ![testrun](result.png)
+
 
 Ссылка на таблицы с чеклистами и баг-репортами в Excel
 https://docs.google.com/spreadsheets/d/1u7N1npDNDefnhJyZSXGmEMv_2h6LXTUcmhvAaKPqlz0/edit?usp=sharing 
